# poker-learning-tool

./: .gitignore  AGENTS.md  CONTEXT.md  api_main.py  main.py  pyproject.toml  readme.md  run_dev.ps1  skills-lock.json
doc/: llm-api.md  llm-guide.md
doc/重構專案/: useskill.md
docs/adr/: 0001-single-core-stack.md  0002-ui-first-deprecation.md  0003-strategy-module-boundary.md
docs/agents/: issue-tracker.md  triage-labels.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ActionBar.tsx  ActionTimeline.tsx  CoachPanel.tsx  CommunityBoard.tsx  GameStatusBar.tsx  GtoPanel.tsx  PlayingCard.tsx  RightSidebar.tsx  SettingsSidebar.tsx  TurnBanner.tsx
frontend/src/hooks/: useSession.ts
frontend/src/types/: game.ts
frontend/src/utils/: cards.ts  seatLayout.ts
scripts/gto-charts/: README.md  chart_builder.py  generate_hu_preflop.py  run_all.ps1
scripts/xiao-liu-youtube/: README.md  batch_all.py  batch_download.py  batch_whisper.py  cookies.txt.example  llm_polish.py  restore_transcript.py  run.ps1  srt_utils.py  whisper_to_srt.py  ytdlp_common.py
src/poker_learning_tool/: __init__.py
src/poker_learning_tool/api/: __init__.py  main.py  schemas.py  session_store.py
src/poker_learning_tool/app/: __init__.py  coach_session.py  hand_record.py  hand_review.py  (+1 more)
tests/: test_api.py  test_app.py  test_env.py  test_hand_record.py  test_learning_session.py  test_positions.py  test_strategy.py  test_table.py  test_xiao_liu.py
(+41 files in other folders)
