[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-learning-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pip>=26.1.1",
    "yt-dlp>=2026.3.17",
    "rlcard[torch]>=1.2.0",
    "streamlit>=1.32.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
whisper = [
    "faster-whisper>=1.1.0",
    "onnxruntime>=1.17.0,<1.24",
]
gto = [
    "openCFR>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
poker_learning_tool = ["strategy/charts/*.json"]
